<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/app_margin_size"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/feedContentIcon"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:src="@drawable/the_verge_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/feedContentHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_verge"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:lineSpacingExtra="7sp"
        android:fontFamily="@font/roboto"
        android:lineHeight="25sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/feedContentIcon"
        app:layout_constraintBottom_toTopOf="@id/feedContentSubHeading"
        app:layout_constraintStart_toEndOf="@id/feedContentIcon" />

    <TextView
        android:id="@+id/feedContentSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tech_news"
        android:textSize="13sp"
        android:textColor="#757575"
        android:lineSpacingExtra="7sp"
        android:fontFamily="@font/roboto"
        android:lineHeight="21sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/feedContentHeading"
        app:layout_constraintBottom_toBottomOf="@id/feedContentIcon"
        app:layout_constraintStart_toEndOf="@id/feedContentIcon" />

    <TextView
        android:id="@+id/feedContentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meta_explains"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:lineHeight="14sp"
        android:lineSpacingExtra="0sp"
        app:layout_constraintTop_toBottomOf="@id/feedContentIcon"
        android:layout_marginTop="@dimen/app_margin_size"
        android:layout_marginEnd="40dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/feedContentImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/app_margin_size"
        tools:src="@drawable/dummy_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/feedContentBody"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

    <TextView
        android:id="@+id/viewComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_count"
        android:textSize="11sp"
        android:letterSpacing="0.03"
        android:textColor="#1E1E1E"
        android:lineHeight="20sp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="7sp"
        app:layout_constraintTop_toBottomOf="@id/feedContentImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/app_margin_size" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_likes"
        android:textSize="11sp"
        android:letterSpacing="0.03"
        android:textColor="#1E1E1E"
        android:fontFamily="@font/roboto"
        android:lineHeight="20sp"
        android:lineSpacingExtra="7sp"
        android:layout_marginTop="@dimen/app_margin_size"
        android:gravity="center"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/valentines_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewComments" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_comments"
        android:textSize="11sp"
        android:letterSpacing="0.03"
        android:textColor="#1E1E1E"
        android:fontFamily="@font/roboto"
        android:lineHeight="20sp"
        android:lineSpacingExtra="7sp"
        android:gravity="center"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/message_icon"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/likes"
        app:layout_constraintBottom_toBottomOf="@id/likes" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="11sp"
        android:letterSpacing="0.03"
        android:textColor="#1E1E1E"
        android:fontFamily="@font/roboto"
        android:lineHeight="20sp"
        android:lineSpacingExtra="7sp"
        android:gravity="center"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/share_icon"
        app:layout_constraintStart_toEndOf="@id/comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likes"
        app:layout_constraintBottom_toBottomOf="@id/likes" />

</androidx.constraintlayout.widget.ConstraintLayout>