<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/app_page_padding"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="290dp"
        android:layout_height="260dp"
        android:src="@drawable/happy_sun"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_page_padding"
        android:text="@string/welcome_text"
        android:fontFamily="@font/noto_sans"
        android:textSize="32sp"
        android:letterSpacing="-0.01"
        android:textColor="@color/black_custom"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFeeds"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/app_page_padding"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/feeds"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUploadImage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/app_page_padding"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/upload_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>