<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onBoardingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".OnBoardingPage3">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipIntroButton"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:text="@string/skip_intro"
        android:textColor="@color/blue_light"
        android:textSize="12sp"
        android:letterSpacing="0.01"
        android:textAllCaps="false"
        android:background="@drawable/button_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/onBoardingImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/app_margin_size"
        android:src="@drawable/business_vision"
        app:layout_constraintTop_toBottomOf="@id/skipIntroButton"
        app:layout_constraintBottom_toTopOf="@id/blue_card"/>

    <View
        android:id="@+id/blue_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoardingImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/blue_card_bg"
        />

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="top"
        android:letterSpacing="-0.01"
        android:lineHeight="44sp"
        android:text="@string/our_vision"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        app:layout_constraintTop_toTopOf="@id/blue_card" />

    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:fontFamily="@font/manrope_extralight"
        android:gravity="center_vertical"
        android:lineHeight="20sp"
        android:lineSpacingExtra="0sp"
        android:padding="@dimen/app_margin_size"
        android:text="@string/on_boarding_page_body"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/blue_card"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        app:layout_constraintTop_toBottomOf="@id/headline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/readyButton"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:background="@drawable/ready_button_bg"
        android:layout_marginBottom="@dimen/app_margin_size"
        app:layout_constraintBottom_toBottomOf="@id/blue_card"
        app:layout_constraintStart_toStartOf="@id/blue_card"
        app:layout_constraintEnd_toEndOf="@id/blue_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>